# cove

./: .gitignore  .golangci.yml  .goreleaser.yml  AGENTS.md  CLAUDE.md  INSTALL.md  LICENSE  Makefile  README.md  RELEASE-NOTES-v0.1.0.md  RELEASE-NOTES-v0.1.1.md  RELEASE-NOTES-v0.1.3.md  RELEASE-NOTES-v0.2.1.md  RELEASE-NOTES-v0.3.0.md  RELEASE-NOTES-v0.4.0.md  RELEASE-NOTES-v0.5.0.md  RELEASE-NOTES-v0.6.0.md  SAFETY.md  agent_bridge.go  agent_bridge_test.go  agent_client.go  agent_client_test.go  agent_control.go  agent_control_attach.go  agent_control_attach_test.go  agent_control_health_interval_test.go  agent_control_interval_test.go  agent_control_state_test.go  agent_control_test.go  agent_gui_session.go  agent_gui_session_test.go  agent_health_test.go  agent_inject.go  agent_inject_test.go  agent_mount_volumes_test.go  agent_routing.go  agent_routing_test.go  agent_sandbox.go  agent_sandbox_anthropic.go  agent_sandbox_anthropic_test.go  (+652 more)
.github/: pull_request_template.md
adapters/anthropic-sandbox-python/: README.md  pyproject.toml
adapters/anthropic-sandbox-python/examples/: computer_use.py
adapters/anthropic-sandbox-python/src/cove_claude_sandbox/: __init__.py  actions.py  client.py  loop.py  sandbox.py
adapters/anthropic-sandbox-python/tests/: test_actions.py  test_client.py  test_loop.py
adapters/openai-agents-python/: README.md  pyproject.toml
adapters/openai-agents-python/examples/: computer_tool.py  computer_use.py  sandbox_run_config.py  sandbox_runner.py
adapters/openai-agents-python/tests/: test_client.py  test_sandbox_run_config.py
(+1588 files in other folders)
