[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cove-claude-sandbox"
version = "0.1.0"
description = "Anthropic computer-use adapter backed by forked cove VMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.72",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cove_claude_sandbox"]

[tool.pytest.ini_options]
pythonpath = ["src"]
