[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cove-sandbox"
version = "0.1.0"
description = "OpenAI Agents SDK adapter for cove macOS VMs"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "tmc" },
]
dependencies = []

[project.optional-dependencies]
agents = ["openai-agents"]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
